--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,9 @@
     "activeTab",
     "scripting"
   ],
+  "icons": {
+    "128": "icon.png"
+  },
   "browser_specific_settings": {
     "gecko": {
       "id": "longdistancecinema@fabioiotti.com"
